--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
     "@types/three": "^0.172.0",
+    "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "three": "^0.172.0"
   },
   "devDependencies": {
