--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "vite": "^5.2.9",
+    "@vitejs/plugin-react": "^4.2.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
